fix(card-practice): add scroll to card if there is too much text in it

--- a/src/features/vocabulary/card-practice/standard/ui/StandardPractice.module.scss
+++ b/src/features/vocabulary/card-practice/standard/ui/StandardPractice.module.scss
@@ -76,6 +76,7 @@
   gap: 18px;
   justify-content: center;
   height: 100%;
+  overflow-y: auto;
 }
 
 .backRow {
